# Flask_project_2

./: app.py  pyproject.toml  schemas.py
instance/: data.db
models/: __init__.py  tag.py
resources/: item.py  store.py  tag.py
