[tool.poetry]
name = "flask-project-2"
version = "0.1.0"
description = ""
authors = ["RDS <rds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
python-dotenv = "^1.0.1"
flask-smorest = "^0.42.3"
black = "^23.12.1"
marshmallow = "^3.20.2"
sqlalchemy = "^2.0.25"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
